infra/k8s/todo-api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-api-deployment
  template:
    metadata:
      labels:
        app: todo-api-deployment
    spec:
      containers:
        - name: todo-api
          image: manrodri/todo-api
---
apiVersion: v1
kind: Service
metadata:
  name: todo-api-srv
spec:
  selector:
    app: todo-api-deployment
  ports:
    - name: ecommerce-client
      protocol: TCP
      port: 5050
      targetPort: 5050
