infra/k8s/todo-client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-client-deployment
  template:
    metadata:
      labels:
        app: todo-client-deployment
    spec:
      containers:
        - name: todo-client
          image: manrodri/todo-client
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-client
spec:
  selector:
    app: ecommerce-client-deployment
  ports:
    - name: ecommerce-client
      protocol: TCP
      port: 80
      targetPort: 80
