infra/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: todo.manrodri.com
      http:
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: todo-api-srv
                port:
                  number: 5050

          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: ecommerce-client
                port:
                   number: 80
